@@ -1,3 +1,10 @@
+2014-03-26  Fabien Chêne  <fabien@gcc.gnu.org>
+        PR c++/52369
+        * cp/method.c (walk_field_subobs): improve the diagnostic
+	locations for both REFERENCE_TYPEs and non-static const members.
+	* cp/init.c (diagnose_uninitialized_cst_or_ref_member): use %q#D
+	instead of %qD to be consistent with the c++11 diagnostic.
+
 2014-03-25  Jason Merrill  <jason@redhat.com>
 
 	PR c++/60566
